# cobeta

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  handoff-files.md  icm.md  scanning.md  viking.md
examples/: node-config-central.yaml  node-config-node.yaml
examples/workspace-examples/: creation.md  monitoring.md  pipeline.md
src/cobeta/: __init__.py  cli.py  ssh.py
src/cobeta/agent/: __init__.py  agent.py  bootstrap.py  builtin_tools.py  prompts.py  tool.py  tools.py
src/cobeta/config/: __init__.py  loader.py  models.py  tailscale.py
src/cobeta/hooks/: __init__.py  handoff_check.py  tag_lint.py  workspace_validate.py
src/cobeta/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/cobeta/memory/: __init__.py  viking_client.py  viking_server.py
src/cobeta/scanner/: __init__.py  heuristic.py  llm_scanner.py  llm_tools.py
src/cobeta/schemas/: cell_context.md.j2  handoff_claude.md.j2  handoff_codex.md.j2  handoff_cursor.mdc.j2  handoff_opencode.json.j2  stage_context.md.j2  workspace_context.md.j2
src/cobeta/setup/: __init__.py  wizard.py
src/cobeta/workspace/: __init__.py  generator.py  handoff.py  inspector.py  models.py
tests/: test_agent.py  test_config.py  test_hooks.py  test_llm_scanner.py  test_workspace_generator.py
